--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                               <li>Developing/maintaining data visualization tools using R and Python</li>
                               <li>Developing meta data files that identifies the filenames, locations and content</li>
                               <li>Organizing and manipulating data by various levels of geography</li>
-                              <li>Integrating databases using Miscrosoft Access and SQL</li>
+                              <li>Integrating databases using Microsoft Access and SQL</li>
                             </ul>
                         </div>
                     </li>
@@ -110,11 +110,11 @@
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
                             <p class="timeline-event-thumbnail">May 2019 - Present</p>
-                            <h3>Walkabilly Laboratory</h3>
+                            <h3>Built Environment and Active Populations Lab (BEAP Lab)</h3>
                             <p><strong>Memorial University of Newfoundland, St. John's, NL</strong></p>
                             <h4>GIS Developer</h4>
                             <ul>
-                              <li>Developing GIS applications and tools using Python to support the needs of the Walkabilly Lab</li>
+                              <li>Developing GIS applications and tools using Python to measure the access level to public transport for each census tract in different metropolitan areas of Canada</li>
                               <li>Implementing geospatial data analysis</li>
                               <li>Managing geodatabases and other databases using ArcGIS (ArcCatalog)</li>
                               <li>Creating sophisticated final map products</li>
@@ -181,7 +181,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 DataS">
-                                <a id="demo02" href="#animatedModal02" class="portfolio_item"> <img src="img/portfolio/03.jpg" alt="image" class="img-responsive" />
+                                <a id="demo02" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/03.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Simulation of a Queuing Model</span> <em>R</em> </div>
@@ -193,7 +193,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 GIS">
-                                <a id="demo03" href="#animatedModal02" class="portfolio_item"> <img src="img/portfolio/02.jpg" alt="image" class="img-responsive" />
+                                <a id="demo03" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/02.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Shell GIS Tool Enhancement</span> <em>ArcGIS / Python</em> </div>
@@ -205,7 +205,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 Computer Science">
-                                <a id="demo04" href="#animatedModal02" class="portfolio_item"> <img src="img/portfolio/04.jpg" alt="image" class="img-responsive" />
+                                <a id="demo04" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/04.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Online Quiz System</span> <em>Python / Flask / HTML </em></div>
@@ -217,7 +217,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 DataS">
-                                <a id="demo05" href="#animatedModal02" class="portfolio_item"> <img src="img/portfolio/05.jpg" alt="image" class="img-responsive" />
+                                <a id="demo05" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/05.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Verification of the Central Limit Theorem</span> <em>R</em> </div>
@@ -229,7 +229,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 GIS">
-                                <a id="demo06" href="#animatedModal06" class="portfolio_item"> <img src="img/portfolio/010.jpg" alt="image" class="img-responsive" />
+                                <a id="demo06" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/010.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Network Analysis to Support Planning in the City of Calgary</span> <em>ArcGIS</em> </div>
@@ -241,7 +241,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 Computer Science">
-                                <a id="demo07" href="#animatedModal07" class="portfolio_item"> <img src="img/portfolio/06.jpg" alt="image" class="img-responsive" />
+                                <a id="demo07" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/06.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Soccer League Match Tracking System</span> <em>Java</em> </div>
@@ -253,7 +253,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 GIS">
-                                <a id="demo08" href="#animatedModal08" class="portfolio_item"> <img src="img/portfolio/07.jpg" alt="image" class="img-responsive" />
+                                <a id="demo08" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/07.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Classification and Comparison of Accuracy Assessment Based
@@ -266,7 +266,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 GIS">
-                                <a id="demo09" href="#animatedModal09" class="portfolio_item"> <img src="img/portfolio/08.jpg" alt="image" class="img-responsive" />
+                                <a id="demo09" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/08.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Suitability Model and Least-Cost Path</span> <em>ArcGIS</em> </div>
@@ -278,7 +278,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 GIS">
-                                <a id="demo10" href="#animatedModal10" class="portfolio_item"> <img src="img/portfolio/09.jpg" alt="image" class="img-responsive" />
+                                <a id="demo10" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/09.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Basement and Overland Flood Risk Modeling of the City of Fernie</span> <em>ArcGIS</em> </div>
@@ -308,19 +308,19 @@
                 <div class="h-50"></div>
             </div>
             <div class="col-md-4" data-aos="fade-up">
+                <p>Website: <a href="https://www.cs.mun.ca/~weil">www.cs.mun.ca/~weil</a></p>
+                <p>Email: <a href="mailto: weil@mun.ca">weil@mun.ca</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/weilcs">www.linkedin.com/in/weilcs</a></p>
+                <p>GitHub: <a href="https://github.com/weilcs">github.com/weilcs</a></p>
 
-
-                <h3>Contact Me</h3>
-                <p>Email: weil@mun.ca </p>
-                <p>LinkedIn: www.linkedin.com/in/weilcs/</p>
-                <p>GitHub: github.com/weilcs</p>
+                <img src=".\img\wei.png" alt="QR code" width="160" height="160">
 
 
                 <ul class="social">
-                    <li><a href="#"><i class="ion-university"></i></a></li>
-                    <li><a href="#"><i class="ion-email"></i></a></li>
-                    <li><a href="#"><i class="ion-social-linkedin"></i></a></li>
-                    <li><a href="#"><i class="ion-social-github"></i></a></li>
+        					<li><a href="https://www.cs.mun.ca/~weil"><i class="ion-university"></i></a></li>
+        					<li><a href="mailto: weil@mun.ca"><i class="ion-email"></i></a></li>
+        					<li><a href="https://www.linkedin.com/in/weilcs"><i class="ion-social-linkedin"></i></a></li>
+        					<li><a href="https://github.com/weilcs"><i class="ion-social-github"></i></a></li>
                 </ul>
                 <div class="clearfix"></div>
                 <div class="h-50"></div>
@@ -353,37 +353,130 @@
         <div class="modal-content">
             <div class="container">
                 <div class="portfolio-padding">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h2>Digital Image Processing</h2>
-                        <div class="h-50"></div>
-                        <ul>
-                          <li>Created Java applications with IntelliJ to open, process and display images</li>
-                          <li>Provided functions to acquire intensity value of RGB channels and to display the intensity histogram of each channel</li>
-                          <li>Implemented image processing operations such as histogram stretching, smoothing/sharpening filtering, Hough transform, and corner detecting</li>
-                        </ul>
-                         </div>
+
+                    <!-- the class name profileModal-demo01 is assocated to the button -->
+                    <div class="profileModal profileModal-demo01">
+                        <div class="col-md-8 col-md-offset-2">
+                            <h2>Digital Image Processing</h2>
+                            <div class="h-50"></div>
+                            <ul>
+                              <li>Created Java applications with IntelliJ to open, process and display images</li>
+                              <li>Provided functions to acquire intensity value of RGB channels and to display the intensity histogram of each channel</li>
+                              <li>Implemented image processing operations such as histogram stretching, smoothing/sharpening filtering, Hough transform, and corner detecting</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="profileModal profileModal-demo02">
+                        <div class="col-md-8 col-md-offset-2">
+                            <h2>Simulation of a Queuing Model</h2>
+                            <div class="h-50"></div>
+                            <ul>
+                                <li>Used queuing theory and simulation modelling in R to balance customers’ waiting time and servers’ idle time in a customer service system</li>
+                                <li>Reduced the cost to the company and increased customer satisfaction</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="profileModal profileModal-demo03">
+                        <div class="col-md-8 col-md-offset-2">
+                            <h2>Shell GIS Tool Enhancement</h2>
+                            <p><strong>Team project developed in partnership with Shell Canada Ltd.</strong></p>
+                            <div class="h-50"></div>
+                            <ul>
+                                <li>Implemented improvements for the GIS tool developed by Shell Canada Ltd. to provide an enhanced user-friendly technical tool</li>
+                                <li>Used Python to analyze the geospatial data and generate required files and documents</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="profileModal profileModal-demo04">
+                        <div class="col-md-8 col-md-offset-2">
+                            <h2>Online Quiz System</h2>
+                            <div class="h-50"></div>
+                            <ul>
+                                <li>Proposed detailed requirements and use case to identify the project scope and objectives </li>
+                                <li>Developed an online quiz program with Python Flask framework and HTML for users to login the system, to create quizzes, to take quizzes, to view results and to grade quizzes</li>
+                                <li>Conducted Unit Test for modules to ensure the logical and the functional correctness</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="profileModal profileModal-demo05">
+                        <div class="col-md-8 col-md-offset-2">
+                            <h2>Verification of the Central Limit Theorem</h2>
+                            <div class="h-50"></div>
+                            <ul>
+                                <li>Generated a simulation using R for four different distributions with various sample sizes </li>
+                                <li>Tested the normality of the results and plotted the results in R</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="profileModal profileModal-demo06">
+                        <div class="col-md-8 col-md-offset-2">
+                            <h2>Network Analysis to Support Planning in the City of Calgary </h2>
+                            <div class="h-50"></div>
+                            <ul>
+                                <li>Created geodatabase network dataset to store City of Calgary street information </li>
+                                <li>Performed time-based routing, closest facility and service area analysis</li>
+
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="profileModal profileModal-demo07">
+                        <div class="col-md-8 col-md-offset-2">
+                            <h2>Soccer League Match Tracking System</h2>
+                            <div class="h-50"></div>
+                            <ul>
+                                <li>Created a Java application with BlueJ to keep track of matches played in a league</li>
+                                <li>Provided functions to setup a league, setup teams, enroll teams, record points and rank the teams based on their points</li>
+                                <li>Allowed users to input the match results or to generate random data to test the program</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="profileModal profileModal-demo08">
+                        <div class="col-md-8 col-md-offset-2">
+                            <h2>Classification and Comparison of Accuracy Assessment Based on TM and SPOT Images</h2>
+                            <div class="h-50"></div>
+                            <ul>
+                                <li>Western Sky Land Trust Project using remote sensing images of Waiparous area of Alberta</li>
+                                <li>Performed classification methods such as unsupervised classification (K-means and ISODATA), supervised classification (maximum likelihood and minimum distance), and object-based classification on satellite images</li>
+                                <li>Post-processed classified images and compared each method's accuracy</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="profileModal profileModal-demo09">
+                        <div class="col-md-8 col-md-offset-2">
+                            <h2>Suitability Model and Least-Cost Path</h2>
+                            <div class="h-50"></div>
+                            <ul>
+                                <li>Created suitability model using dataset of Waterton Lakes National Park</li>
+                                <li>Calculated least-cost path using ArcGIS ModelBuilder</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="profileModal profileModal-demo10">
+                        <div class="col-md-8 col-md-offset-2">
+                            <h2>Basement and Overland Flood Risk Modeling of the City of Fernie</h2>
+                            <div class="h-50"></div>
+                            <ul>
+                                <li>Determined potential and predicted extent of flooding in low-lying area of the City of Fernie for future planning</li>
+                                <li>Created 3D visualization video</li>
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
     </div>
 
-    <!--DEMO02-->
-    <div id="animatedModal02" class="popup-modal02">
-        <!--THIS IS IMPORTANT! to close the modal, the class name has to match the name given on the ID -->
-        <div id="btn-close-modal" class="close-animatedModal02 close-popup-modal02"> <i class="ion-close-round"></i> </div>
-        <div class="clearfix"></div>
-        <div class="modal-content">
-            <div class="container">
-                <div class="portfolio-padding">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h2>Digital Image Processing</h2>
-                        <div class="h-50"></div>
 
-                         </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
 
 
